# FlowMile

./: README.md  pyproject.toml
action_flows/: pyproject.toml  requirements.txt
action_flows/app/: main.py  run_flows.py
action_flows/app/api/: api.py  deps.py
action_flows/app/api/routes/: flows.py
action_flows/app/core/: config.py  database.py
action_flows/app/flow_core/: abstract_flow.py  flow_builder copy.py  flow_builder.py  flow_executor.py  test.py
action_flows/app/flow_core/experiments/: assistant.py  flow1.py  flow2.py  flow3.py  flow4.py  flow5.py  flow6-test.py  flow6.py  flow7-test.py  flow7.py  flow8-test.py  run_flows.py
action_flows/app/flow_core/flow_templates/: 1.json  3.json  4.json  5.json  6.json
action_flows/app/flow_core/tools/: generic_tool.py  tools.py
action_flows/app/flow_core/utils/: util.py
action_flows/app/models/: flow.py
action_flows/app/schemas/: flow.py
action_flows/app/service/: flow_service.py
action_flows/frontend/: main.py
action_flows/frontend/pages/: 1_file_conversion.py  2_resume_shortlist.py  3_invoice_data_extract.py  4_pdf_data_extract.py
src/app/: main.py  run_flows.py
src/app/api/: api.py
src/app/core/ai_models/: provider.py
src/app/core/flows/: abstract_flow.py  flow2.py
src/app/core/utils/: util.py
