[tool.poetry]
name = "false"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn ="^0.18.3"
pydantic_core ="^2.6.3"
langchain ="^0.2.17"
langchain-community ="^0.2.19"
pymupdf = "^1.25.1"

langgraph ="^0.2.59"
langchain-groq ="^0.1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
